--- a/src/scss/base/_tailwind--modular-spacing--padding.scss
+++ b/src/scss/base/_tailwind--modular-spacing--padding.scss
@@ -68,38 +68,38 @@
   @include modular-spacing('padding', 0 0 0 0);
 }
 
-// exploring negative values for the multiplier for smaller amounts (NOT negative padding or margin, just smaller multiplier)
-//
-//@for $i from 1 through 4 {
-//  .su-pt-neg-#{$i} {  // top
-//    @include modular-spacing('padding', -$i null null null);
-//  }
-//  .su-pr-neg-#{$i} {  // right
-//    @include modular-spacing('padding', null -$i null null);
-//
-//  }
-//  .su-pb-neg-#{$i} {  // bottom
-//    @include modular-spacing('padding', null null -$i null);
-//
-//  }
-//  .su-pl-neg-#{$i} {  // left
-//    @include modular-spacing('padding', null null null -$i);
-//  }
-//
-//  // horizontal padding
-//  .su-px-neg-#{$i} {
-//    @include modular-spacing('padding', null -$i null -$i);
-//
-//  }
-//
-//  // vertical padding
-//  .su-py-neg-#{$i} {
-//    @include modular-spacing('padding', -$i null -$i null);
-//  }
-//  // auto-generate for all sides padding
-//  .su-p-neg-#{$i} {
-//    @include modular-spacing('padding', -$i -$i -$i -$i);
-//  }
-//}
-//
+// negative values for the modular spacing multiplier are for smaller amounts (NOT negative padding)
+
+@for $i from -4 through -1 {
+  .su-pt-small#{$i} {  // top
+    @include modular-spacing('padding', $i null null null);
+  }
+  .su-pr-small#{$i} {  // right
+    @include modular-spacing('padding', null $i null null);
+
+  }
+  .su-pb-small#{$i} {  // bottom
+    @include modular-spacing('padding', null null $i null);
+
+  }
+  .su-pl-small#{$i} {  // left
+    @include modular-spacing('padding', null null null $i);
+  }
+
+  // horizontal padding
+  .su-px-small#{$i} {
+    @include modular-spacing('padding', null $i null $i);
+
+  }
+
+  // vertical padding
+  .su-py-small#{$i} {
+    @include modular-spacing('padding', $i null $i null);
+  }
+  // auto-generate for all sides padding
+  .su-p-small#{$i} {
+    @include modular-spacing('padding', $i $i $i $i);
+  }
+}
+
 
